bk_ida/sjengida/g0/nk_attacked
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:750:6: error: use of undeclared identifier 'bishop_o_2'
v3 = bishop_o_2[i]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:767:12: error: use of undeclared identifier 'knight_o_1'
if ( board[knight_o_1[j] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:772:6: error: use of undeclared identifier 'rook_o_0'
v9 = rook_o_0[k]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:789:7: error: use of undeclared identifier 'bishop_o_2'
v13 = bishop_o_2[n]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:806:12: error: use of undeclared identifier 'knight_o_1'
if ( board[knight_o_1[ii] + square] == 4 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:811:7: error: use of undeclared identifier 'rook_o_0'
v18 = rook_o_0[jj] + square; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/attacks.c:818:8: error: use of undeclared identifier 'rook_o_0'
v18 += rook_o_0[jj]; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/nk_attacked/src/obj/attacks.o] Error 1
